# financial-reporting-with-great-tables-python

./: README.md  complete-example-pandas.py  complete-example.py  main-polars.py  main.py  output-pandas.html  output.html  pyproject.toml  test_main_polars.py
